# contacts-test

./: Dockerfile  Procfile  README.md  docker-entrypoint.sh  pyproject.toml  requirements.txt  test.db
.elasticbeanstalk/: config.yml
app/: main.py  test.db
