[tool.poetry]
name = "contacts-test"
version = "0.1.0"
description = "Backend for contacts app"
authors = ["Marcus Deans <marcus.deans@duke.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
databases = {extras = ["postgresql","sqlite"], version = "^0.6.0"}
jsonpickle = "^2.2.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
